--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,43 +1,94 @@
-/**
+/**/
 div{
     border: 1px solid black;
 }
-.container, .linea-tiempo{
-    border: 1px solid green;
-}
-**/
+/**/
 
-.linea-tiempo{
-    max-width: 1024px;
-    width: 90%;
-    margin: 0 auto;
+
+
+
+/* The actual timeline (the vertical ruler) */
+.main-timeline-5 {
+  position: relative;
+  max-width: 50%;
+  margin: 0 auto;
 }
-.rango-tiempo{
-    padding: 3em 2em 2em;
-    position: relative;
-    color: black;
-    border-left: 2px solid grey;
+
+/* The actual timeline (the vertical ruler) */
+.main-timeline-5::after {
+  content: "";
+  position: absolute;
+  width: 3px;
+  background-color: #fff;
+  top: 0;
+  bottom: 0;
+  left: auto;
+  margin-left: -3px;
 }
-.rango-tiempo::before{
-    content: attr(range);
-    position: absolute;
-    left: -60px;
-    font-weight: bold;
-    top: 1em;
-    display: block;
-    font-weight: 700;
-    font-size: 0.785rem;
-    color: black;
+
+/* Container around content */
+.timeline-5 {
+  position: relative;
+  background-color: inherit;
+  width: 100%;
 }
-.rango-tiempo::after{
-    width: 10px;
-    height: 10px;
-    display: block;
-    top: 1em;
-    position: absolute;
-    left: -7px;
-    border-radius: 10px;
-    content: "";
-    border: 2px solid yellow;
-    background: yellow;
+
+/* The circles on the timeline */
+.timeline-5::after {
+  content: "";
+  position: absolute;
+  width: 17px;
+  height: 17px;
+  right: 1px;
+  background-color: #fff;
+  top: 18px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+/* Place the container to the right */
+.right-5 {
+  padding: 0px 0px 20px 40px;
+  left: auto;
+}
+
+/* Add arrows to the right container (pointing left) */
+.right-5::before {
+  content: " ";
+  position: absolute;
+  top: 18px;
+  z-index: 1;
+  left: 30px;
+  border: medium solid #fff;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent #fff transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right-5::after {
+  left: -10px;
+}
+
+@media (max-width: 991px) {
+  .main-timeline-5 {
+    max-width: 100%;
+  }
+}
+.gradient-custom-5 {
+  /* fallback for old browsers */
+  background: #ebbba7;
+
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(
+    to right,
+    rgba(235, 187, 167, 1),
+    rgba(207, 199, 248, 1)
+  );
+
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(
+    to right,
+    rgba(235, 187, 167, 1),
+    rgba(207, 199, 248, 1)
+  );
 }
