--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,25 @@ div{
 }
 **/
 
+.card3-per-row{
+  flex-basis: 90%;
+  /* border: 1px solid black;*/
+}
+.vr{
+  background-color: yellow;
+  opacity: 100%;
+  width: 3px;
+}
+.circulo1{
+  width: 1rem;
+  min-width: 1rem;
+  height: 1rem;
+  min-height: 1rem;
+  border-radius: 50%;
+  background-color: yellow;
+}
+
+/*
 .range{
   position:relative;
   display:flex;
@@ -11,14 +30,6 @@ div{
   width:2rem;
 }
 
-.circle{
-  width: 2rem;
-  min-width: 2rem;
-  height: 2rem;
-  min-height: 2rem;
-  border-radius: 50%;
-  background-color: yellow;
-}
 
 .line{
   position:absolute;
@@ -29,3 +40,14 @@ div{
   height: 100%;
 }
 
+
+.circle{
+  width: 2rem;
+  min-width: 2rem;
+  height: 2rem;
+  min-height: 2rem;
+  border-radius: 50%;
+  background-color: yellow;
+}
+
+*/
